--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
 
     <body>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6113657187895671"
+     crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
         <div class="nav">
             <img src="book.png" alt="" id="mm">
